Bug #31841 write_set should not be set for pk during update_row
Submitted: 25 Oct 2007 12:06 Modified: 8 Nov 2007 14:11
Reporter: Tomas Ulin
Status: Closed
Category:Server: RBR Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Tomas Ulin Target Version:CGE-6.3.6

[25 Oct 2007 12:06] Tomas Ulin
Description:
write_set should not be set for pk during update_row

How to repeat:
.
[25 Oct 2007 12:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/36332

ChangeSet@1.2673, 2007-10-25 12:09:40+02:00, tomas@whalegate.ndb.mysql.com +2 -0
  Bug #31841 write_set should not be set for pk during update_row
  - also add small optim not to loop over the pk's if there are none in the write_set
[8 Nov 2007 14:11] Jon Stephens
Thank you for your bug report. This issue has already been fixed in the latest released
version of that product, which you can download at

  http://www.mysql.com/downloads/

Documented fix in 5.1.22-ndb-6.3.6 changelog. Closed (Tomas says is CGE-only fix).