Bug #31841 write_set should not be set for pk during update_row - also add small optim not to loop over the pk's if there are none in the write_set